# Aetherion

./: CMakeLists.txt  README.md  Readme.md  shell.nix
src/: main.cpp
